fix: consistent flex-wrap point

--- a/src/views/certifications/views/landing/components/exam-card/exam-card.module.css
+++ b/src/views/certifications/views/landing/components/exam-card/exam-card.module.css
@@ -9,10 +9,14 @@
 
 .contents {
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	flex-wrap: wrap;
+	flex-direction: column;
 	gap: 24px;
+
+	@media (--dev-dot-tablet-up) {
+		justify-content: space-between;
+		align-items: center;
+		flex-direction: row;
+	}
 }
 
 .comingSoonCard {
